# picongpu

include/picongpu/plugins/: ISimulationPlugin.hpp  PluginController.hpp
include/picongpu/simulation/control/: Simulation.hpp  SimulationStarter.hpp
include/picongpu/traits/: GetMetadata.hpp
include/pmacc/mappings/kernel/: MappingDescription.hpp
include/pmacc/pluginSystem/: IPlugin.hpp
share/picongpu/unit/: CMakeLists.txt  GetMetadata.cpp
share/pmacc/examples/nbody/: CMakeLists.txt  main.cpp
share/pmacc/examples/nbody/include/: DeviceHeap.hpp  Particles.hpp  Particles.kernel  dynamics.hpp  infrastructure.hpp
